# eka

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  STYLE_GUIDE.md  atom.nix  atom.toml  default.nix  ekala.toml  netlify.toml  shell.nix
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
adrs/: 0000-template.md  0001-lock-generation-addendum.md  0001-lock-generation.md  0002-eka-add-command.md  0003-pure-rust-pin-dependencies.md  0004-publish-command.md  0005-uri-format.md  0006-snix-http-caching.md  0007-refined-manifest-format.md  0008-lockfile-refactor.md  0009-named-roots-mvp.md  0009-repository-identity-and-discovery.md  0010-electron-sources.md
bar/: atom.toml
crates/atom/: Cargo.toml
crates/atom/src/: core.rs  lib.rs  lock.rs  log.rs  manifest.rs  storage.rs  store.rs
crates/atom/src/id/: mod.rs
crates/atom/src/id/tests/: mod.rs
crates/atom/src/lock/: serde_base32.rs  test.rs
crates/atom/src/manifest/: deps.rs
crates/atom/src/manifest/sets/: mod.rs
crates/atom/src/package/: mod.rs
crates/atom/src/package/metadata/: mod.rs
crates/atom/src/package/metadata/lock/: mod.rs  test.rs
crates/atom/src/package/metadata/lock/direct/: mod.rs
crates/atom/src/package/metadata/manifest/: mod.rs
crates/atom/src/package/metadata/manifest/direct/: mod.rs
crates/atom/src/package/publish/: error.rs  mod.rs
crates/atom/src/package/publish/git/: inner.rs  mod.rs  test.rs
crates/atom/src/package/resolve/: mod.rs
crates/atom/src/package/resolve/direct/: mod.rs
crates/atom/src/package/sets/: mod.rs
crates/atom/src/publish/: error.rs  mod.rs
crates/atom/src/publish/git/: inner.rs  mod.rs  test.rs
crates/atom/src/storage/: git.rs
crates/atom/src/storage/git/: cache.rs  test.rs
crates/atom/src/store/: git.rs
crates/atom/src/store/git/: test.rs
crates/atom/src/uri/: mod.rs
crates/atom/src/uri/tests/: mod.rs
crates/atom/src/uri/tests/snapshots/: atom__uri__tests__ref_snapshot.snap  atom__uri__tests__uri_snapshot.snap  atom__uri__tests__url_snapshot.snap
crates/config/: Cargo.toml
crates/config/src/: eka.default.toml  lib.rs
crates/eka-root-macro/: Cargo.toml
crates/eka-root-macro/src/: lib.rs
crates/hyperdep/: Cargo.toml  README.md
crates/hyperdep/src/: lib.rs  version.rs
crates/nixec/: Cargo.toml
crates/nixec/src/: lib.rs  main.rs
dev/: atom.toml  default.nix
dev/env/: mod.nix  shell.nix
docs/: trust-model.md
docs/sketches/: trust-model.md
docs/talks/: from-nix-to-eka.html  from-nix-to-eka.md.in
docs/talks/examples/: 01-environment-degradation.sh  02-merkle-tree-demo.sh  03-docker-limitations-demo.sh  05-nix-language-intro.sh  07-eka-atoms-demo.sh
env/: rust-toolchain.toml
examples/: README.md
examples/foo/: atom.toml  default.nix
examples/foo/src/: mod.nix
foo/: bar.atom
nix-lock/: atom.nix  atom.toml  closure.nix  composer.nix  default.nix  dep-key.nix  errors.nix  fetch.nix  import.nix  locals.nix  locker.nix  scope.nix
src/: lib.rs  main.rs
src/cli/: logging.rs  mod.rs  store.rs
src/cli/commands/: init.rs  mod.rs
src/cli/commands/add/: mod.rs
src/cli/commands/add/git/: mod.rs
src/cli/commands/new/: mod.rs
src/cli/commands/plan/: mod.rs
src/cli/commands/publish/: init.rs  mod.rs
src/cli/commands/publish/git/: mod.rs
src/cli/commands/resolve/: mod.rs
src/cli/commands/resolve/git/: mod.rs
talks/: from-nix-to-eka.md.in
talks/examples/: 04-nixpkgs-pain-demo.sh  04-static-build-recipes.sh  08-eka-workflow-demo.sh  README.md  shell.nix
