workspace.members = ["crates/atom", "crates/config", "crates/nixec"]

[package]
edition = "2021"
name    = "eka"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = true

[dependencies]
anyhow.workspace             = true
clap.workspace               = true
serde.workspace              = true
serde_json.workspace         = true
thiserror.workspace          = true
tokio.workspace              = true
tracing.workspace            = true
tracing-appender.workspace   = true
tracing-error.workspace      = true
tracing-subscriber.workspace = true

atom = { path = "crates/atom" }
gix  = { workspace = true, optional = true }

[workspace.dependencies]
anyhow           = "^1"
serde_json       = "^1"
tempfile         = "^3.13"
thiserror        = "^1"
tracing          = "^0.1"
tracing-appender = "^0.2"
tracing-error    = "^0.2"

clap               = { version = "^4", features = ["derive"] }
insta              = { version = "^1", features = ["yaml"] }
semver             = { version = "^1", features = ["serde"] }
serde              = { version = "^1", features = ["derive"] }
tokio              = { version = "^1", features = ["full"] }
toml_edit          = { version = "^0.22", features = ["serde"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
url                = { version = "^2", features = ["serde"] }


gix = { version = "^0.73", default-features = false, features = [
  "blocking-http-transport-reqwest-rust-tls",
  "max-performance-safe",
  # FIXME: investigating fix for inappropriate tracing behavior upstream:
  # https://github.com/Byron/gitoxide/issues/1615
  # "tracing",
  "blob-diff",
  "revision",
] }
prodash = { version = "30.0.1", features = [
  "render-line",
  "render-line-crossterm",
  "render-line-autoconfigure",
] }

[features]
default = ["stores"]
git     = ["gix", "atom/git"]
stores  = ["git"]
