workspace.members = [
  "crates/eka-root-macro",
  "crates/atom",
  "crates/config",
  "crates/nixec",
]

[package]
edition = "2024"
name    = "eka"
version = "0.3.0"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = true

[dependencies]

anyhow.workspace             = true
clap.workspace               = true
either.workspace             = true
gix.workspace                = true
semver.workspace             = true
tempfile.workspace           = true
thiserror.workspace          = true
tokio.workspace              = true
toml_edit.workspace          = true
tracing.workspace            = true
tracing-appender.workspace   = true
tracing-indicatif.workspace  = true
tracing-subscriber.workspace = true

atom.path = "crates/atom"

[workspace.dependencies]
anyhow                = "^1"
lazy-regex            = "3.4.1"
pathdiff              = "0.2.3"
tempfile              = "^3.13"
thiserror             = "^1"
tracing               = "^0.1"
tracing-appender      = "^0.2"
tracing-indicatif     = "^0.3"
unicode-ident         = "1.0.19"
unicode-normalization = "0.1.24"

bimap = { version = "0.6.3", features = ["serde"] }
clap = { version = "^4", features = [
  "derive",
  "wrap_help",
  "unstable-markdown",
] }
either = { version = "1.15.0", features = ["serde"] }
hex = { version = "^0.4", features = ["serde"] }
insta = { version = "^1", features = ["yaml"] }
semver = { version = "^1", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
toml_edit = { version = "^0.23", features = ["serde", "parse"] }
tracing-subscriber = { version = "^0.3", features = [
  "env-filter",
  "json",
  "terminal_size",
] }
url = { version = "^2", features = ["serde"] }


gix = { version = "^0.73", default-features = false, features = [
  "blocking-http-transport-reqwest-rust-tls",
  "max-performance-safe",
  # FIXME: investigating fix for inappropriate tracing behavior upstream:
  # https://github.com/Byron/gitoxide/issues/1615
  # "tracing",
  "blob-diff",
  "revision",
] }
prodash = { version = "30.0.1", features = [
  "render-line",
  "render-line-crossterm",
  "render-line-autoconfigure",
] }

[patch.crates-io]
tracing            = { git = "https://github.com/nrdxp/tracing", branch = "hierarchical" }
tracing-appender   = { git = "https://github.com/nrdxp/tracing", branch = "hierarchical" }
tracing-core       = { git = "https://github.com/nrdxp/tracing", branch = "hierarchical" }
tracing-futures    = { git = "https://github.com/nrdxp/tracing", branch = "hierarchical" }
tracing-subscriber = { git = "https://github.com/nrdxp/tracing", branch = "hierarchical" }
