[package]
edition = "2024"
name    = "atom"
version = "0.3.0"

[dependencies]
addr       = "^0.15"
base32     = "^0.5"
blake3     = "^1.8"
bstr       = "^1"
nom        = "^7"
path-clean = "^1"

bimap.workspace                 = true
either.workspace                = true
hex.workspace                   = true
lazy-regex.workspace            = true
pathdiff.workspace              = true
prodash.workspace               = true
semver.workspace                = true
serde.workspace                 = true
tempfile.workspace              = true
thiserror.workspace             = true
tokio.workspace                 = true
toml_edit.workspace             = true
tracing.workspace               = true
tracing-indicatif.workspace     = true
unicode-ident.workspace         = true
unicode-normalization.workspace = true
url.workspace                   = true

config = { path = "../config" }
eka-root-macro = { path = "../eka-root-macro" }
gix = { workspace = true, default-features = false, features = ["serde"] }
nix-compat = { git = "https://github.com/nrdxp/snix", branch = "canon", features = [
  "serde",
] }
snix-castore = { git = "https://github.com/nrdxp/snix", branch = "canon", default-features = false, features = [
  "fuse",
] }
snix-glue = { git = "https://github.com/nrdxp/snix", branch = "canon" }
snix-store = { git = "https://github.com/nrdxp/snix", branch = "canon", default-features = false, features = [
  "fuse",
] }

[dev-dependencies]
anyhow.workspace             = true
insta.workspace              = true
tempfile.workspace           = true
tracing-subscriber.workspace = true
